[gd_scene load_steps=8 format=3 uid="uid://dihpeuni4xdo2"]

[ext_resource type="PackedScene" uid="uid://beepgbryoiiic" path="res://Scenes/ControlRoom.tscn" id="1_talaw"]
[ext_resource type="Script" path="res://Menus/MenuUI.gd" id="2_2ps8x"]
[ext_resource type="AudioStream" uid="uid://bfsnpuh6o015w" path="res://Sounds/Intro.wav" id="3_p1g7s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nexuq"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_as3tb"]
resource_name = "Intro"
length = 60.0
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_p1g7s")
}],
"times": PackedFloat32Array(2.6)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/MarginContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 1.8),
"transitions": PackedFloat32Array(1, 3.86374),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UI/Control/Label:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2.26667, 2.6, 10.1333, 12.6333, 15.7667, 17.1, 18.3333, 19.8333, 23.5, 24.0333, 25.1, 26.4667, 27.5333, 28.5, 29.4333, 30.4333, 36.1667, 42.7, 45.8, 48.0667, 51.4667, 55.4, 57.4333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": ["
 ", "Since 1999, the glorious United Soviet States Of America has managed to automate it's power industry  ", "Including it's nuclear reactors", "And you, yes YOU, wonderful citizen", "with no degree...", "no aspirations...", "and little to no value", "get to be the sole steward of the Rockstown nuclear facility", "", "Now...", "I know what you're thinking", "\"Just me?\"", "\"On my own?\"", "", "Yes
", "But don't worry, the whole facility is totally and completely automated", "nothing has gone wrong in the over 200 years that the facility has been managing itself", "And no doubt, nothing will happen today.", "Or any other day, for that matter.", "But we do need somebody - and that means you", "to be there, just in case something does go wrong", "and someone's got to take the fall.", ""]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UI/MysticPanelOfFadingToBlack:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(55.7667, 59.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_ua6aa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/MarginContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/Control/Label:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["
"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UI/MysticPanelOfFadingToBlack:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gk8ns"]
_data = {
"Intro": SubResource("Animation_as3tb"),
"RESET": SubResource("Animation_ua6aa")
}

[node name="MainMenu" type="Node3D"]

[node name="ControlRoom" parent="." instance=ExtResource("1_talaw")]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-0.641262, 0.0912263, -0.76188, 0, 0.992908, 0.118889, 0.767322, 0.0762392, -0.636714, -3.13032, 2.95595, -2.92944)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_2ps8x")

[node name="Control" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 399.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MysticPanelOfFadingToBlack" type="Panel" parent="UI"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nexuq")

[node name="MarginContainer" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_bottom = 200

[node name="BoxContainer" type="BoxContainer" parent="UI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/separation = 15
vertical = true

[node name="StartButton" type="Button" parent="UI/MarginContainer/BoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 60
text = "Start your new job"
alignment = 0

[node name="QuitButton" type="Button" parent="UI/MarginContainer/BoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 60
text = "Quit To Desktop"
alignment = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gk8ns")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AnimationPlayer"]
volume_db = -10.0

[connection signal="pressed" from="UI/MarginContainer/BoxContainer/StartButton" to="UI" method="_on_start_button_pressed"]
[connection signal="pressed" from="UI/MarginContainer/BoxContainer/QuitButton" to="UI" method="_on_quit_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="UI" method="_on_animation_player_animation_finished"]
